--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,22 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<logback>1.1.7</logback>
+		<junit>4.12</junit>
 	</properties>
 
 	<dependencies>
-			<!-- LOGGING -->
+		<!-- LOGGING -->
 		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback}</version>
+		</dependency>
+		<!-- UNITARY TESTING -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit}</version>
 		</dependency>
 	</dependencies>
 </project>
