--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.s4n.technicalTest</groupId>
 	<artifactId>technical-test</artifactId>
-	<version>1.0-RC1</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>technical-test</name>
 
 	<properties>
