--- a/src/main/resources/technicalTest.properties
+++ b/src/main/resources/technicalTest.properties
@@ -1,4 +1,5 @@
 files.path=src/main/resources/movements.csv
-files.output.path=
+files.output.path=src/main/resources/
 max.operation.blocks=10
 max.orders.per.drone=3
+thread.pool.max.threads=20
